complete swagger doc
