# handler/task.go
@@ -3,12 +3,59 @@ package handler
 import (
 	"fmt"
 	"net/http"
+	"strconv"
 	"time-tracker/model"
 
 	"github.com/gofiber/fiber/v2"
 	"gorm.io/gorm"
 )
 
+// GetTask godoc
+//
+// @Description	gets task
+// @Param 		task_id 			query int 	 false 	"used for finding task by id"
+// @Param 		task_name 			query string false 	"used for finding task by name"
+// @Param 		task_description 	query string false 	"used for finding task by desc"
+// @Accept		json
+// @Produce		json
+// @Success		200	{object}	Output	"task data"
+// @Failure		400	{object}	Output	"error"
+// @Router		/api/task/getUser 	[get]
+func GetTask(db *gorm.DB) fiber.Handler {
+	return func(c *fiber.Ctx) error {
+		id := 0
+		if c.Query("task_id") != "" {
+			id, _ = strconv.Atoi(c.Query("task_id"))
+		}
+
+		name := c.Query("task_name")
+		description := c.Query("task_description")
+
+		task := model.Task{
+			ID:          uint(id),
+			Name:        name,
+			Description: description,
+		}
+
+		db.Find(&task)
+
+		c.Status(http.StatusOK)
+		return c.JSON(Output{
+			Data:  task,
+			Error: "",
+		})
+	}
+}
+
+// CreateTask godoc
+//
+// @Description	create task
+// @Param 		task body model.TaskCreate true "used to set task params"
+// @Accept		json
+// @Produce		json
+// @Success		200	{object} 	Output "success response"
+// @Failure		400	{object}	Output	"error"
+// @Router		/api/task/createTask 	[post]
 func CreateTask(db *gorm.DB) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		var input model.TaskCreate
@@ -35,6 +82,15 @@ func CreateTask(db *gorm.DB) fiber.Handler {
 	}
 }
 
+// UpdateTask godoc
+//
+// @Description	update task by id
+// @Param 		task body model.TaskUpdate true "used to update task"
+// @Accept		json
+// @Produce		json
+// @Success		200	{object} 	Output "success response"
+// @Failure		400	{object}	Output "error"
+// @Router		/api/task/updateTask 	[patch]
 func UpdateTask(db *gorm.DB) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		var input model.TaskUpdate
@@ -71,6 +127,15 @@ func UpdateTask(db *gorm.DB) fiber.Handler {
 	}
 }
 
+// DeliteTask godoc
+//
+// @Description	delete task by id
+// @Param 		task body model.TaskDelete true "used to delete task"
+// @Accept		json
+// @Produce		json
+// @Success		200	{object} Output
+// @Failure		400	{object} Output	"error"
+// @Router		/api/task/deliteTask 	[delete]
 func DeliteTask(db *gorm.DB) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		var input model.TaskDelete
