# handler/track.go
@@ -3,6 +3,7 @@ package handler
 import (
 	"fmt"
 	"net/http"
+	"strconv"
 	"time"
 	"time-tracker/model"
 
@@ -10,6 +11,59 @@ import (
 	"gorm.io/gorm"
 )
 
+// GetTrack godoc
+//
+// @Description	gets track
+// @Param 		track_id 		query int 	false 	"used for finding track by id"
+// @Param 		user_id 		query int 	false 	"used for finding track by user id"
+// @Param 		task_id 		query int 	false 	"used for finding track by task id"
+// @Accept		json
+// @Produce		json
+// @Success		200	{object}	Output	"track data"
+// @Failure		400	{object}	Output	"error"
+// @Router		/api/track/getTrack 	[get]
+func GetTrack(db *gorm.DB) fiber.Handler {
+	return func(c *fiber.Ctx) error {
+		id := 0
+		if c.Query("track_id") != "" {
+			id, _ = strconv.Atoi(c.Query("track_id"))
+		}
+
+		userId := 0
+		if c.Query("user_id") != "" {
+			id, _ = strconv.Atoi(c.Query("user_id"))
+		}
+
+		taskId := 0
+		if c.Query("task_id") != "" {
+			id, _ = strconv.Atoi(c.Query("task_id"))
+		}
+
+		track := model.Track{
+			ID:     uint(id),
+			UserID: uint(userId),
+			TaskID: uint(taskId),
+		}
+
+		db.Find(&track)
+
+		c.Status(http.StatusOK)
+		return c.JSON(Output{
+			Data:  track,
+			Error: "",
+		})
+	}
+}
+
+// CreateTrack godoc
+//
+// @Description	create track
+// @Param 		track body model.TrackCreate true "used to set track"
+// @Accept		json
+// @Produce		json
+// @Success		200	{object} 	Output "success response"
+// @Failure		400	{object}	Output "error"
+// @Router		/api/track/createTrack 	[post]
 func CreateTrack(db *gorm.DB) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		var input model.TrackCreate
@@ -17,8 +71,16 @@ func CreateTrack(db *gorm.DB) fiber.Handler {
 		if err != nil {
 			return handleErrors(c, err)
 		}
+
 		start, err := time.Parse("2006-01-02 15:04:05", input.Start)
+		if err != nil {
+			return handleErrors(c, err)
+		}
+
 		stop, err := time.Parse("2006-01-02 15:04:05", input.Stop)
+		if err != nil {
+			return handleErrors(c, err)
+		}
 
 		track := model.Track{
 			UserID: input.UserID,
@@ -40,6 +102,15 @@ func CreateTrack(db *gorm.DB) fiber.Handler {
 	}
 }
 
+// UpdateTrack godoc
+//
+// @Description	update track by id
+// @Param 		track 	body model.TrackUpdate true "used to update track"
+// @Accept		json
+// @Produce		json
+// @Success		200	{object} 	Output "success response"
+// @Failure		400	{object}	Output "error"
+// @Router		/api/track/updateTrack 	[patch]
 func UpdateTrack(db *gorm.DB) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		var input model.TrackUpdate
@@ -82,6 +153,15 @@ func UpdateTrack(db *gorm.DB) fiber.Handler {
 	}
 }
 
+// DeliteTrack godoc
+//
+// @Description	delete track by id
+// @Param 		track body model.TrackDelete true "used to delete track"
+// @Accept		json
+// @Produce		json
+// @Success		200	{object} Output
+// @Failure		400	{object} Output	"error"
+// @Router		/api/track/deliteTrack 	[delete]
 func DeliteTrack(db *gorm.DB) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		var input model.TrackDelete
@@ -101,7 +181,7 @@ func DeliteTrack(db *gorm.DB) fiber.Handler {
 
 		c.Status(http.StatusOK)
 		return c.JSON(Output{
-			Data:  fmt.Sprintf("user with ID:%v deleted successfuly", input.ID),
+			Data:  fmt.Sprintf("track with ID:%v deleted successfuly", input.ID),
 			Error: "",
 		})
 	}
