# model/user.go
@@ -1,31 +1,31 @@
 package model
 
 type User struct {
-	ID         uint
-	Name       string
-	Surname    string
-	Patronymic *string
-	Address    string
-	Passport   int
+	ID         uint    `json:"id" example:"1"`
+	Name       string  `json:"name" example:"Jon"`
+	Surname    string  `json:"surname" example:"Doe"`
+	Patronymic *string `json:"patronymic" example:"White"`
+	Address    string  `json:"address" example:"LA"`
+	Passport   int     `json:"passport" example:"123456"`
 }
 
 type UserCreate struct {
-	Name       string
-	Surname    string
-	Patronymic *string
-	Address    string
-	Passport   int
+	Name       string  `json:"name" example:"Jon"`
+	Surname    string  `json:"surname" example:"Doe"`
+	Patronymic *string `json:"patronymic" example:"White"`
+	Address    string  `json:"address" example:"LA"`
+	Passport   int     `json:"passport" example:"123456"`
 }
 
 type UserUpdate struct {
-	ID         uint
-	Name       *string
-	Surname    *string
-	Patronymic *string
-	Address    *string
-	Passport   *int
+	ID         uint    `json:"id" example:"1"`
+	Name       *string `json:"name" example:"Jon"`
+	Surname    *string `json:"surname" example:"Doe"`
+	Patronymic *string `json:"patronymic" example:"White"`
+	Address    *string `json:"address" example:"LA"`
+	Passport   *int    `json:"passport" example:"123456"`
 }
 
 type UserDelete struct {
-	ID uint
+	ID uint `json:"id" example:"1"`
 }
